# CodeTuneStudio

./: .autopep8  .bandit  .codetunestudio.yml  .coveragerc  .dev.vars.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .replit  .safety.yml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUTOMATION_IMPLEMENTATION_SUMMARY.md  AUTOMATION_QUICK_REFERENCE.md  AUTOMATION_SETUP_SUMMARY.md  BUG_ESCALATION.md  CHANGELOG.md  CI_CD_SETUP.md  CLAUDE.md  CLEANUP_EXECUTION_GUIDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_REVIEW.md  CONTRIBUTING.md  COPILOT_CODEX_GUIDE.md  DATABASE_MIGRATION_GUIDE.md  DEPENDENCY_FIX_SUMMARY.md  DEPENDENCY_RESOLUTION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATION.md  Dockerfile  FIRST_RELEASE_SUMMARY.md  GITHUB_RELEASE_NOTES_v0.1.1.md  HUGGINGFACE.md  IMPLEMENTATION_SUMMARY.md  (+62 more)
.claude/: settings.json
.codex/: config.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-code-review-gate.yml  automation-ci.yml  (+20 more)
.streamlit/: config.toml
attached_assets/: Pasted-Here-s-a-rephrased-version-for-mid-conversation-leading-with-consolidation-and-a-quick-check-on-the-1738848479874.txt  Pasted-Here-s-an-updated-explanation-with-your-suggestions-incorporated-which-should-provide-a-more-compre-1738851384051.txt  Pasted-Integrating-NVIDIA-s-LogitsProcessorZoo-into-your-CodeTune-application-can-significantly-enhance-the-1738847678918.txt  Pasted-Integrating-the-concept-of-amphigory-nonsensical-or-absurd-writing-into-the-development-and-fine-tun-1738850141962.txt  Pasted-PEP-257-titled-Docstring-Conventions-outlines-the-standards-for-writing-docstrings-in-Python-cod-1738897096902.txt  Pasted-The-GenerateDecoderOnlyOutput-class-in-Hugging-Face-s-Transformers-library-is-designed-to-encapsulat-1738847989529.txt  Pasted-The-GenerateEncoderDecoderOutput-class-in-Hugging-Face-s-Transformers-library-is-designed-to-encapsu-1738848003630.txt  Pasted-Thoughts-The-user-wants-me-to-test-the-improved-guide-in-Replit-optimize-it-based-on-the-testing--1741689152229.txt  Pasted-To-integrate-a-one-click-conversion-feature-for-non-GGUF-models-into-your-application-enabling-user-1738847096294.txt  github_com_foundation-model-stack_bamba.md  huggingface_co_datasets_reddit-tools-HF_dataset-creator-reddit-bestofredditorupdates.md
automation/: README.md  __init__.py  config.py  create_branch.py  create_issue.py  manage_project.py
codetunestudio/: __init__.py  __version__.py  cli.py
codetunestudio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codex/: README.md  setup.sh
components/: __init__.py  dataset_selector.py  development_phases.py  documentation_viewer.py  experiment_compare.py  experimental_goals.py  loading_animation.py  model_export.py  parameter_config.py  plugin_manager.py  tokenizer_builder.py  training_monitor.py  version_manager.py
config/: __init__.py  constants.py  logging_config.py  space.yaml
core/: __init__.py  __version__.py  cli.py  logging.py  logging_config.py  middleware.py  refactoring_agent.py  server.py
docs/: AI_CODE_REVIEW_GATE.md  ARCHITECTURE.md  CLOUDFLARE_DEPLOYMENT_SUMMARY.md  CLOUDFLARE_QUICKSTART.md  CLOUDFLARE_WORKERS.md  CONTRIBUTING_CODE_QUALITY.md  COPILOT_CODEX_COMPREHENSIVE_GUIDE.md  COPILOT_GUIDE.md  COPILOT_GUIDES_INDEX.md  COPILOT_GUIDE_CHANGELOG.md  Copilot_Codex_Guide.md  DEPLOYMENT_COMPARISON.md  DEVELOPMENT_PHASES.md  EXPERIMENTAL_GOALS.md  IMPLEMENTATION_SUMMARY.md  LANDING.md  PLUGIN_GUIDE.md  PRODUCTION_READINESS_REMEDIATION_PLAN.md  PYTHON_RULES.md  REFACTORING_GUIDE.md  REFACTORING_TASKS.md  RELEASE.md  SECURITY_BEST_PRACTICES.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_MIGRATION_GUIDE.md  SECURITY_QUICK_REFERENCE.md  WORKFLOW_AUDIT_REPORT.md  WORKFLOW_QUICK_REFERENCE.md  WORKFLOW_TESTING_GUIDE.md  ai-assistant-guide.md  copilot-codex-configuration-guide.md  copilot-codex-guide.md  copilot-codex-trading-bot-swarm.md  copilot-instructions.md  copilot_codex_comprehensive_guide.md  copilot_codex_configuration_guide.md  copilot_codex_guide.md  copilot_codex_trading_bot_swarm_guide.md  github-copilot-codex-guide.md  index.html  (+3 more)
examples/: GETTING_STARTED.md  README.md  __init__.py  flask_logging_demo.py  logging_demo.py  run_refactoring_demo.py
experimental/: __init__.py  goals.py
migrations/: __init__.py  alembic.ini  env.py
phases/: __init__.py  base.py  brownfield.py  creative.py  greenfield.py
plugins/: __init__.py  anthropic_code_suggester.py  code_analyzer.py  openai_code_analyzer.py
pull/: 117.md
pull_requests/: 101_description.md
scripts/: README.md  __init__.py  cleanup_stale_prs.py  generate_quality_report.sh  security_check.py  setup-pre-commit.sh  update_checklist.py  validate_pyproject.py  validate_structure.py  validate_workflows.py
src/: README.md  __init__.py  app.py  db_check.py  manage.py  worker.js
static/: structured-data.js
styles/: custom.css
tests/: __init__.py  test_anthropic_code_suggester.py  test_app.py  test_automation.py  test_ci_workflows.py  test_cli.py  test_code_analyzer.py  test_core_package.py  test_dataset_utils.py  test_db_check.py  test_logging.py  test_manage.py  test_openai_code_analyzer.py  test_package_compatibility.py  test_parameter_utils.py  test_plugin_lifecycle.py  test_refactoring_agent.py  test_requirements.py  test_security.py  test_server_helpers.py  test_template_manager.py  test_update_checklist.py  test_workflow_security.py  test_workflow_simulation.py  test_workflows.py
utils/: __init__.py  argilla_dataset.py  config.py  config_validator.py  database.py  dataset_utils.py  distributed_trainer.py  documentation.py  logging_config.py  mock_training.py  model_inference.py  model_versioning.py  parameter_utils.py  peft_trainer.py  pydantic_models.py  reddit_dataset.py  secure_flask.py  security.py  shared_dataset_utils.py  shared_parameter_utils.py  template_manager.py  test___init__.py  visualization.py
(+74 files in other folders)
