[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "alembic>=1.14.1",
    "anthropic>=0.45.2",
    "argilla>=2.7.0",
    "bitsandbytes>=0.45.1",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "peft>=0.14.0",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.37",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "transformers>=4.48.2",
    "twilio>=9.4.4",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
